--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Git Clone</title>
 </head>
 <body>
     
+    <div class="row">
+        <div class="col-4">
+            <p>
+                I would try to have serious fun with Bootstrap
+            </p>
+        </div>
+    </div>
 </body>
 </html>
