Today is actuall the feast of St. Jude Thadeus

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="row">
         <div class="col-4">
             <p>
-                I would try to have serious fun with Bootstrap
+                I would try to have serious fun with Bootstrap.
+                Today happens to be the feast day of St. Jude Thadeus
+                my patreon saint... 
             </p>
         </div>
     </div>
